@@ -2,16 +2,17 @@ package iris.backend_service.locations.service;
 
 import iris.backend_service.locations.dto.LocationInformation;
 import iris.backend_service.locations.dto.LocationOverviewDto;
-import iris.backend_service.locations.search.db.DBSearchIndex;
 import iris.backend_service.locations.search.db.LocationRepository;
 import iris.backend_service.locations.search.db.model.Location;
 import iris.backend_service.locations.search.db.model.LocationIdentifier;
+import iris.backend_service.locations.search.lucene.LuceneIndexService;
 import iris.backend_service.locations.utils.ValidationHelper;
 import lombok.AllArgsConstructor;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import javax.validation.constraints.NotNull;
 
@@ -28,27 +29,28 @@ public class LocationService {
 
 	private final @NotNull LocationRepository locationRepo;
 
-	private final @NotNull DBSearchIndex index;
+	private final @NotNull LuceneIndexService index;
 
 	public List<String> addLocations(String providerId, List<LocationInformation> locations) {
 		// TODO: Authenticate API Access
-		List<String> listOfInvalidLocations = new ArrayList<String>();
-		List<Location> listOfValidLocations = new ArrayList<Location>();
+		List<String> listOfInvalidLocations = new ArrayList<>();
+		List<Location> listOfValidLocations = new ArrayList<>();
 
 		for (LocationInformation locationInformation : locations) {
 			Location location = getLocationFromLocationInformation(providerId, locationInformation);
 
 			if (location.getName() != null
-				&& location.getContactRepresentative() != null
-				&& (ValidationHelper.isValidAndNotNullEmail(location.getContactEmail())
-					|| ValidationHelper.isValidAndNotNullPhoneNumber(location.getContactPhone()))) {
+					&& location.getContactRepresentative() != null
+					&& (ValidationHelper.isValidAndNotNullEmail(location.getContactEmail())
+							|| ValidationHelper.isValidAndNotNullPhoneNumber(location.getContactPhone()))) {
 				listOfValidLocations.add(location);
 			} else {
 				listOfInvalidLocations.add(locationInformation.getId());
 			}
 		}
 
-		locationRepo.saveAll(listOfValidLocations);
+		// locationRepo.saveAll(listOfValidLocations);
+		index.indexLocations(providerId, listOfValidLocations);
 
 		return listOfInvalidLocations;
 	}
@@ -68,21 +70,23 @@ public class LocationService {
 
 	public List<LocationOverviewDto> getProviderLocations(String providerId) {
 
-		var providerLocations = locationRepo.findByIdProviderId(providerId.toString());
+		// var providerLocations = locationRepo.findByIdProviderId(providerId.toString());
 
-		return providerLocations.map(location -> {
-			return new LocationOverviewDto(location.getId().getLocationId(), location.getName());
-		}).toList();
+		var locations = index.searchByProviderId(providerId);
+
+		return locations.map(it -> new LocationOverviewDto(it.getId(), it.getName()))
+				.collect(Collectors.toList());
 
 	}
 
 	public boolean deleteLocation(String providerId, String locationId) {
 		// Construct a new ID to match the (provider, id) pair key
-		LocationIdentifier ident = new LocationIdentifier(providerId.toString(), locationId);
+		// LocationIdentifier ident = new LocationIdentifier(providerId.toString(), locationId);
 
-		Optional<Location> match = locationRepo.findById(ident);
-		if (match.isPresent()) {
-			locationRepo.delete(match.get());
+		// Optional<Location> match = locationRepo.findById(ident);
+		// if (match.isPresent()) {
+		// locationRepo.delete(match.get());
+		if (index.deleteLocation(providerId, locationId)) {
 			return true;
 		}
 		return false;
@@ -93,9 +97,10 @@ public class LocationService {
 	}
 
 	public Optional<LocationInformation> getLocationByProviderIdAndLocationId(String providerId, String locationId) {
-		var ident = new LocationIdentifier(providerId, locationId);
 
-		return locationRepo.findById(ident).map(this::toDto);
+		// var ident = new LocationIdentifier(providerId, locationId);
+		// return locationRepo.findById(ident).map(this::toDto);
+		return index.searchByProviderIdAndLocationId(providerId, locationId);
 	}
 
 	private LocationInformation toDto(Location it) {
